fix: footer elements alignment

--- a/style.css
+++ b/style.css
@@ -50,11 +50,16 @@ img {
     HEADER
 -------------------*/
 
+header{
+    position: relative;
+}
+
 .col-grow img{
     width: 150px;
 }
 
 .header-container{
+    position: sticky;
     background-color: #ff6900;
     padding-top: 16px;
 }
@@ -186,9 +191,6 @@ main .container{
     min-height: 50px;
 }
 
-footer .col-50{
-    padding: 16px 0px;
-}
 
 .boolando, .where{
     color: #ffffff;
@@ -214,9 +216,20 @@ footer .col-50{
 }
 
 .where{
-    text-align: right;
+    display: flex;
+    justify-content: right;
 }
 
-.socials ul li{
-    text-align: right;
+.socials{
+    display: flex;
+    justify-content: right;
 }
+
+
+footer .col-50{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 16px 0px;
+}
+
